<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0.0dip">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_scrollFlags="enterAlwaysCollapsed|scroll">

            <TextView
                android:id="@id/tvLabelLastRead"
                android:layout_width="fill_parent"
                android:layout_height="30.0dip"
                android:background="?odd_item_bg"
                android:gravity="center_vertical"
                android:paddingLeft="18.0dip"
                android:paddingRight="18.0dip"
                android:text="@string/bookmark_last_read"
                app:tabTextAppearance="@style/TabTextAppearance" />

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@id/llLastRead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingLeft="@dimen/space_2"
                    android:paddingRight="@dimen/space_2">

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5.0dip"
                        android:layout_weight="1.0"
                        android:textSize="12.0sp"
                        android:visibility="gone" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5.0dip"
                        android:layout_weight="1.0"
                        android:textSize="12.0sp"
                        android:visibility="gone" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5.0dip"
                        android:layout_weight="1.0"
                        android:textSize="12.0sp"
                        android:visibility="gone" />
                </LinearLayout>

            </HorizontalScrollView>

            <TextView
                android:id="@id/tvLabelQuickLink"
                android:layout_width="fill_parent"
                android:layout_height="30.0dip"
                android:background="?odd_item_bg"
                android:gravity="center_vertical"
                android:paddingLeft="18.0dip"
                android:paddingRight="18.0dip"
                android:text="@string/quick_links"
                app:tabTextAppearance="@style/TabTextAppearance" />

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:fitsSystemWindows="true"
                android:overScrollMode="never"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@id/llQuickLinks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingLeft="@dimen/space_2"
                    android:paddingRight="@dimen/space_2">

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5.0dip"
                        android:layout_weight="1.0"
                        android:text="@string/text_ayatul_kursi"
                        android:textSize="12.0sp" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5.0dip"
                        android:layout_weight="1.0"
                        android:textSize="12.0sp" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5.0dip"
                        android:layout_weight="1.0"
                        android:textSize="12.0sp" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5.0dip"
                        android:layout_weight="1.0"
                        android:textSize="12.0sp" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5.0dip"
                        android:layout_weight="1.0"
                        android:textSize="12.0sp" />
                </LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="30.0dip"
                android:background="?odd_item_bg"
                android:orientation="horizontal"
                android:paddingLeft="18.0dip"
                android:paddingRight="18.0dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/all"
                    app:tabTextAppearance="@style/TabTextAppearance" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/colon_mark"
                    app:tabTextAppearance="@style/TabTextAppearance" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@id/tabLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:background="@color/transparent"
                    app:tabBackground="@color/transparent"
                    app:tabGravity="center"
                    app:tabIndicatorHeight="0.0dip"
                    app:tabMode="fixed"
                    app:tabSelectedTextColor="?android:textColor"
                    app:tabTextAppearance="@style/TabTextAppearance"
                    app:tabTextColor="?colorPrimaryLight">

                    <com.google.android.material.tabs.TabItem
                        android:id="@id/tiSura"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quran_sura" />

                    <com.google.android.material.tabs.TabItem
                        android:id="@id/tiPage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quran_page" />

                    <com.google.android.material.tabs.TabItem
                        android:id="@id/tiJuz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quran_juz2" />

                    <com.google.android.material.tabs.TabItem
                        android:id="@id/tiHizb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quran_hizb" />
                </com.google.android.material.tabs.TabLayout>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>