<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:fitsSystemWindows="true">


    <LinearLayout
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:paddingBottom="70dp"
        android:id="@+id/fullscreen_content_controls"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_margin="10dp"
            android:padding="10dp"
            android:orientation="vertical"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                android:text="@string/instruction_manual"

                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:padding="10dp"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                android:text="@string/hent_manual"

                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>





        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/sp_country"
            android:gravity="center"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:background="@color/cardview_light_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/sp_city"
            android:gravity="center"
            android:padding="5dp"
            android:background="@color/cardview_light_background"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.button.MaterialButton

                style="@style/Widget.Material3.Button.ElevatedButton"
                android:id="@+id/btn_current_cancel"

                android:gravity="center"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



            <com.google.android.material.button.MaterialButton

                style="@style/Widget.Material3.Button.ElevatedButton"
                android:id="@+id/btn_current_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </com.google.android.material.button.MaterialButton>


        </LinearLayout>



    </LinearLayout>
</ScrollView>